# ffmpegHello

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/java/com/example/administrator/helloworld/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
